# vscode-herc-lang-support

./: .gitignore  .vscodeignore  CHANGELOG.md  LICENSE  README.md  command-docs-standard.md  language-configuration.json  package-lock.json  package.json  snippets.json  tsconfig.json  vsc-extension-quickstart.md
server/: .gitignore  Cargo.toml  build.rs  package-lock.json  package.json  references.txt  tsconfig.json
server/antlr-parser/: HercScriptLexer.interp  HercScriptLexer.js  HercScriptLexer.tokens  HercScriptListener.js  HercScriptParserVisitor.js  HercScriptVisitor.js
server/formatter_tests/cases/: 0_0_script_header.txt  0_1_duplicate_header.txt  0_2_basic_commands.txt  0_3_shop_header.txt  0_4_function_header.txt  0_5_spawn_header.txt  0_6_warp_header.txt  1_0_old_commands.txt  1_1_expressions.txt  1_2_if.txt  1_3_for.txt  1_4_switch.txt  1_5_label.txt  1_6_mes_mesf_string.txt  1_7_while.txt  3_0_complete.txt
server/formatter_tests/expected/: 0_0_script_header.txt  0_1_duplicate_header.txt  0_2_basic_commands.txt  0_3_shop_header.txt  0_4_function_header.txt  0_5_spawn_header.txt  0_6_warp_header.txt  1_0_old_commands.txt  1_1_expressions.txt  1_2_if.txt  1_3_for.txt  1_4_switch.txt  1_5_label.txt  1_6_mes_mesf_string.txt  3_0_complete.txt
server/src/: completion.rs  diag.rs  file.rs  formatter.rs  main.rs  script_commands.rs  server.ts  signature.rs  sourceFile.rs  source_file.rs  state.rs
server/src/commands/: achievement_progress.json  activatepset.json  add_group_command.json  addchannelhandler.json  addmonsterdrop.json  addtimer.json  addtimercount.json  addtoskill.json  agitcheck.json  agitcheck2.json  agitend.json  agitend2.json  agitstart.json  agitstart2.json  airship_respond.json  announce.json  areaannounce.json  areamobuseskill.json  areamonster.json  areapercentheal.json  areawarp.json  atcommand.json  atoi.json  attachnpctimer.json  attachrid.json  (+507 more)
server/tree-sitter-hercscript/: .editorconfig  binding.gyp  grammar.js  index.js  package-lock.json  package.json  test.txt
(+697 files in other folders)
