[package]
name = "server"
version = "0.1.0"
authors = ["Guilherme G. Menaldo <guilherme.menaldo@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# jsonrpc-core = "14.0.5"
# serde_derive = "1.0.104"
# futures = "0.3.4"
# env_logger = "0.7.1"
# tokio = "0.2.11"
# tokio-io = "0.1.12"
# tokio-codec = "0.1.1"
# tokio-executor = "0.1.9"
# tower-lsp = "0.6.0"
# bytes = "0.4.12"
# jsonrpc-derive = "14.0.5"
# log = "0.4.8"
# lsp-types = "0.68.0"
# nom = "5.0.1"
# serde = { version = "1.0.103", features = ["derive"] }
# serde_json = "1.0.40"
# tower-service = "0.2.0"
bytes = "0.4.12"
futures = "0.1.28"
jsonrpc-core = "14.0.5"
jsonrpc-derive = "14.0.5"
log = "0.4.8"
lsp-types = "0.68.0"
nom = "5.0.1"
serde = { version = "1.0.103", features = ["derive"] }
serde_json = "1.0.40"
tokio-codec = "0.1.1"
tokio-executor = "0.1.9"
tokio-io = "0.1.12"
tower-service = "0.2.0"
tower-lsp = "0.6.0"
env_logger = "0.7.1"
tokio = "0.1.22"