[package]
name = "server"
version = "0.1.0"
authors = ["Guilherme G. Menaldo <guilherme.menaldo@outlook.com>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
bytes = "0.5"
futures = { version = "0.3", features = ["compat"] }
jsonrpc-core = "14.0"
jsonrpc-derive = "14.0"
log = "0.4"
lsp-types = "0.70"
nom = "5.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "0.2", features = ["macros", "rt-core", "io-std"] }
tokio-util = { version = "0.2", features = ["codec"] }
tower-service = "0.3"
# tokio-codec = "0.2 "
# tokio-executor = "0.1.9"
tower-lsp = "0.7"
env_logger = "0.7"
#tokio = { version = "0.2", features = ["io-std", "macros", "test-util"] }
tree-sitter = "0.6.1"

[build-dependencies]
cc = "1.0.50"
